<resources>
    <string name="app_name">Bookaroom</string>
    <string name="SelectButaca">SELECCIONA BUTACA</string>
    <string name="selectedButacaString">"HAS ESCOLLIT: BUTACA "</string>
    <string name="makeReservation">REALITZAR RESERVA</string>
    <string name="cancelReservation">CANCELAR RESERVA</string>
    <string name="search_hint">Escriu aqui...</string>
    <string name="price">PREU</string>
    <string name="start_date">DATA INICI</string>
    <string name="select_date">Escull dia...</string>
    <string name="end_date">DATA FI</string>
    <string name="chat_rules">Lee a continuacion las normas antes de entrar al chat. \n
1.No insultes, ni faltes al respeto. \n
2.No digas nada que pueda considerase para adultos. \n
    3. Diviertete!</string>
    <string name="accept">ACCEPTO</string>
    <string name="deny">NO ACCEPTO</string>
    <string name="chat_hint">Escriu el teu missatge</string>
    <string name="inventory_hint">Selecciona un ticket per a veure el seus detalls</string>
    <string name="description">DESCRIPCIÓ</string>
    <string name="cancelTicket">CANCEL TICKET</string>
    <string name="BeCareful">VES AMB COMPTE</string>
    <string name="warningDetails">Al cancelar la reseva, aquesta acció serà irrevesible. \n \n Pensa-ho bé abans de continuar.</string>
    <string name="warningAccept">Ho entenc i vull continuar</string>
    <string name="createEventTitle">CREACIÓ D\'EVENTS</string>
    <string name="createEventRules">Benvingut! \n Recorda crear un event al que tothom pugi participar. \n Sort!</string>
    <string name="checknotaccept">Accepta els termes per a poder cancelar la teva reserva, siusplau.</string>
    <string name="passwordNotSame">Passwords don\'t match</string>
    <string name="incorrectcredentials">incorrectcredentials</string>
    <string name="createdBy">createdBy\n</string>
    <string name="priceDetail">priceDetail\n</string>
    <string name="roomDetail">roomDetail</string>
    <string name="dayDetail">dayDetail</string>
    <string name="Reserve">Reserve</string>
    <string name="close">close</string>
    <string name="edituser">edituser</string>
    <string name="changelanguage">changelanguage</string>
    <string name="logout">logout</string>
    <string name="spanish">spanish</string>
    <string name="catalan">catalan</string>
    <string name="english">english</string>
    <string name="name">name</string>
    <string name="capacity">capacity</string>
    <string name="startdate">dataini</string>
    <string name="datafi">datafi</string>
    <string name="room">room</string>
    <string name="preu">preu</string>
    <string name="createevent">createevent</string>
    <string name="email">email</string>
    <string name="password" />
    <string name="confirmpassword" />
    <string name="surname" />
    <string name="edituserdetails" />
    <string name="cancelchanges">cancelchanges</string>
    <string name="desc">desc</string>
    <string name="recoverPassword">recoverPassword</string>
    <string name="loadAvailableRooms">loadAvailableRooms</string>
    <string name="passwordlengthwrong" />
    <string name="passwordinvalidcharacters" />
    <string name="fillallfields">fillallfields</string>
</resources>
