<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="325dp"
    android:layout_height="450dp"
    android:background="@drawable/brown_orange_rectangle"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="290dp"
        android:layout_height="420dp"
        android:background="@drawable/eventinfo_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/textView9"
            android:layout_width="230dp"
            android:layout_height="250dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="center_vertical"
            android:text="@string/chat_rules"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accept_agreement_bt"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:text="@string/accept"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/outfit_bold"
            android:background="@drawable/brown_orange_rectangle"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toTopOf="@+id/cancel_agreement_bt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            app:layout_constraintVertical_bias="0.096" />

        <TextView
            android:id="@+id/cancel_agreement_bt"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:text="@string/deny"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/outfit_bold"
            android:background="@drawable/brown_orange_rectangle"
            android:layout_marginBottom="36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>