<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="510dp"
    android:background="@drawable/eventinfo_background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="280dp"
        android:layout_height="470dp"
        android:background="@drawable/white_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/outfit_bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/BeCareful"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/view7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="36dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/imageView7"
            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:alpha="0.05"
            android:background="@drawable/warning_ic"
            app:layout_constraintBottom_toTopOf="@+id/checkBoxCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:textSize="20sp"
            android:fontFamily="@font/outfit_bold"
            android:textColor="@color/black"
            android:text="@string/warningDetails"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <CheckBox
            android:id="@+id/checkBoxCancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginBottom="12dp"
            android:buttonTint="@color/red"
            android:fontFamily="@font/outfit_light"
            android:gravity="center|start"
            android:text="@string/warningAccept"
            app:layout_constraintBottom_toTopOf="@+id/cancelReservaButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cancelReservaButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/red_rectangle"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="@string/cancelReservation"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BackInventoryButton"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/BackInventoryButton"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/orange_rectangle"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="TORNAR"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>