<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include
        android:id="@+id/navigationBarLayout"
        layout="@layout/top_line" />


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:background="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="360dp"
        android:layout_height="530dp"
        android:background="@drawable/eventinfo_background"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_semibold"
            android:gravity="center"
            android:text="@string/SelectButaca"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/libGDXView"
            android:layout_width="300dp"
            android:layout_height="245dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <View
            android:id="@+id/view5"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/selectedSeatText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/libGDXView" />

        <TextView
            android:id="@+id/selectedSeatText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/outfit_regular"
            android:gravity="center"
            android:text="@string/selectedButacaString"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/makeReservaButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/makeReservaButton"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/dark_orange_rectangle"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="@string/makeReservation"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cancelSeatReservation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/cancelSeatReservation"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginBottom="32dp"
            android:textSize="12sp"
            android:background="@drawable/orange_rectangle"
            android:fontFamily="@font/outfit_medium"
            android:gravity="center"
            android:text="@string/cancelReservation"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/navigationBarLayout"
        layout="@layout/navigation_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
