<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="350dp"
        android:layout_height="650dp"
        android:background="@drawable/brown_orange_rectangle"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/eventinfo_background"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginRight="30dp"
                android:src="@drawable/star" />

            <ImageView
                android:layout_width="60dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/star" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="475dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="@drawable/eventinfo_background"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.139">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/white_rectangle"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/eventTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:gravity="center"
                    android:text="EVENTO 1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/createdBy"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/eventInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.."
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/black" />

                <TextView
                    android:id="@+id/eventPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:text="@string/priceDetail"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventRoom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="left"
                    android:text="@string/roomDetail"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="left"
                    android:text="@string/dayDetail"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/imageViewReserve"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit_medium"
                android:background="@drawable/orange_rectangle"
                android:text="@string/Reserve"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/imageViewCancel"
                android:layout_width="200dp"
                android:layout_height="38dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/outfit_medium"
                android:background="@drawable/orange_rectangle"
                android:text="@string/close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

