<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="510dp"
    android:background="@drawable/eventinfo_background">

    <TextView
        android:id="@+id/TitleSelectedTicket"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/outfit_bold"
        android:gravity="center"
        android:text="EVENTO 27"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/view8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/outfit_regular"
        android:gravity="center"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionSelecTicket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/descriptionSelecTicket"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/outfit_extralight"
        android:gravity="center"
        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.."
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="290dp"
        android:layout_height="125dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/white_rectangle"
        app:layout_constraintBottom_toTopOf="@+id/cancelTicketButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="125dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_semibold"
            android:gravity="end"
            android:text="@string/start_date"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="125dp"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/outfit_semibold"
            android:gravity="end"
            android:text="@string/end_date"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="125dp"
            android:layout_height="20dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/outfit_semibold"
            android:gravity="end"
            android:text="@string/price"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view6"
            android:layout_width="1dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateStartSelectedTicket"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_light"
            android:gravity="start"
            android:text="30/02/25"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/saveChanges"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/outfit_light"
            android:gravity="start"
            android:text="1/02/25"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view6"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceSelectedTicket"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:layout_marginTop="88dp"
            android:fontFamily="@font/outfit_light"
            android:gravity="start"
            android:text="50€"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/view6"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/cancelTicketButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/red_rectangle"
        android:fontFamily="@font/outfit_medium"
        android:gravity="center"
        android:text="@string/cancelTicket"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
